--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,24 @@
+alembic==1.13.1
 blinker==1.6.3
 certifi==2023.7.22
 charset-normalizer==3.3.1
 click==8.1.7
 Flask==3.0.0
 Flask-JWT-Extended==4.5.3
+Flask-Migrate==4.0.5
+Flask-SQLAlchemy==3.1.1
 flask-swagger-ui==4.11.1
+greenlet==3.0.3
 idna==3.4
 itsdangerous==2.1.2
 Jinja2==3.1.2
+Mako==1.3.0
 MarkupSafe==2.1.3
+psycopg2-binary==2.9.9
 PyJWT==2.8.0
 requests==2.31.0
+SQLAlchemy==2.0.23
+typing_extensions==4.9.0
 urllib3==2.0.7
 waitress==2.1.2
 Werkzeug==3.0.1
