--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 alembic==1.13.1
+APScheduler==3.10.4
 blinker==1.6.3
 certifi==2023.7.22
 charset-normalizer==3.3.1
@@ -16,9 +17,12 @@ Mako==1.3.0
 MarkupSafe==2.1.3
 psycopg2-binary==2.9.9
 PyJWT==2.8.0
+pytz==2023.3.post1
 requests==2.31.0
+six==1.16.0
 SQLAlchemy==2.0.23
 typing_extensions==4.9.0
+tzlocal==5.2
 urllib3==2.0.7
 waitress==2.1.2
 Werkzeug==3.0.1
